# practical_cryptography_engineering

./: .gitignore  CMakeLists.txt  Pipfile  README.md  aes_gcm.c  aes_gcm_cryptography.py  aesgcm_file.c  aesgcm_file.py  ecdh.c  ecdh.py  ecdh_read_server_pub_write_client_pub.c  ecdh_write_server_pub.py  kdf.c  kdf.py  nacl_genkey.py  nacl_sign.py  nacl_symmetric_gen.py  nacl_verify.py  rsa_sign.c  rsa_sign.py  rsa_verify.c  rsa_verify.py
sodium/: CMakeLists.txt  Readme.md  ed25519_sodium_pynacl.c  hello_sodium.c  nacl_decrypt_file.c  nacl_ed25519.c  nacl_encrypt_file.c  nacl_genkey.c  nacl_sign.c  nacl_symmetric_gen.c  nacl_verify.c
sodium/cmake/: Findsodium.cmake
